# BMSTU-OS

./: README.md
calculator/: calculator.h  calculator.x  calculator_client.c  calculator_clnt.c  calculator_server.c  calculator_svc.c  calculator_xdr.c
daemon/: reread.c
dirs/: CMakeLists.txt  main.c
fortunes/: main.c
int8h & timer interruption/report_1/: preambule.tex
int8h & timer interruption/report_2/: content.tex  preambula.tex  report.tex  title.tex
lab_2 about linux commands/: example.c
lab_2 about processes/: CMakeLists.txt  example.c  exec.c  fork.c  pipe.c  signal.c  wait.c
module/: main.c
modules_communication/: Makefile  md.h  md1.c  md2.c  md3.c
open/: CMakeLists.txt  first.c  first_multithread.c  second.c  second_multithread.c  third.c  third_append.c
rpc/: CMakeLists.txt  bakery.h  bakery.x  bakery_client.c  bakery_clnt.c  bakery_server.c  bakery_svc.c  bakery_xdr.c
rpc_multithread/: Makefile.prod_cons  cons_client.c  prod_client.c  prod_cons.h  prod_cons.x  prod_cons_clnt.c  prod_cons_server.c  prod_cons_svc.c  prod_cons_xdr.c
semaphore/: CMakeLists.txt  consumer_producer.c  reader_writer.c  win_readers_writers.c
seq/: Makefile  md_seq.c
single/: Makefile  main.c
socket_local/: CMakeLists.txt  client_no_response.c  client_response.c  request_response.h  server_no_response.c  server_response.c  socketpair.c
socket_remote/: CMakeLists.txt  epoll.sh  epoll_client.c  epoll_server.c  process_client.c  process_server.c  table.py  thread.sh  thread_client.c  thread_server.c  times.csv
tasklet/: Makefile  tasklet.c
vfs/: Makefile  vfs.c
work/: Makefile  mywq.c
(+6 files in other folders)
